Cleanup of deprecated functions in Java 9