@@ -416,8 +416,8 @@ public class CreateCourseJSONRequestController extends JSONRequestController {
       name = (String) parameterNames.nextElement();
       if (name.startsWith("educationType.")) {
         String[] nameElements = name.split("\\.");
-        Long educationTypeId = new Long(nameElements[1]);
-        Long educationSubtypeId = new Long(nameElements[2]);
+        Long educationTypeId = Long.valueOf(nameElements[1]);
+        Long educationSubtypeId = Long.valueOf(nameElements[2]);
         Vector<Long> v = chosenEducationTypes.containsKey(educationTypeId) ? chosenEducationTypes.get(educationTypeId) : new Vector<Long>();
         v.add(educationSubtypeId);
         if (!chosenEducationTypes.containsKey(educationTypeId)) {
