@@ -413,8 +413,8 @@ public class EditCourseJSONRequestController extends JSONRequestController {
       name = (String) parameterNames.nextElement();
       if (name.startsWith("educationType.")) {
         String[] nameElements = name.split("\\.");
-        Long educationTypeId = new Long(nameElements[1]);
-        Long educationSubtypeId = new Long(nameElements[2]);
+        Long educationTypeId = Long.valueOf(nameElements[1]);
+        Long educationSubtypeId = Long.valueOf(nameElements[2]);
         Vector<Long> v = chosenEducationTypes.containsKey(educationTypeId) ? chosenEducationTypes.get(educationTypeId)
             : new Vector<Long>();
         v.add(educationSubtypeId);
@@ -741,7 +741,7 @@ public class EditCourseJSONRequestController extends JSONRequestController {
         }
       }
       else {
-        boolean modified = new Integer(1).equals(requestContext.getInteger(colPrefix + ".modified"));
+        boolean modified = Integer.valueOf(1).equals(requestContext.getInteger(colPrefix + ".modified"));
         if (modified) {
           /* Existing student */
           Student student = studentDAO.findById(studentId);
